#6: dark mode helper concat fix & update bg-color of drop down

--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ button:focus-visible {
     
   }
   li[id*='headlessui-listbox-option']{
-    background-color: #102649;
+    background-color: #1b2c47;
     color:#ebeff1
     
   }
